# loopy

./: .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  editorconfig
allocator/: allocator.c  allocator.h
base64/: base64.c  base64.h
demo/: client.html  index.html
js/: js.c  js.h  js_internal.h  test.c
kv/: kv.c  kv.h  kv_internal.h  test.c
log/: log.c  log.h
loopy/: args.c  internal.h  load.c  loopy.c  main.c  test.c
loopy/mjs/: index.mjs
loopy/mjs/_system/: files.mjs
mjs/: index.mjs
serve/: req.c  res.c  serve.c  serve.h  serve_internal.h  srv_test_utils.c  test.c  test.h
src/: main.c
str/: fixed.c  str.c  str.h  test.c
string_view/: string_view.h
